# ai-agent-deploy

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: server.py
copilot/: .workspace
copilot/ai-agent/: manifest.yml
copilot/ai-agent/addons/: bedrock-policy.yml
